working on homepage-v3
- mostly added pixels

--- a/website/home-v3.html
+++ b/website/home-v3.html
@@ -43,6 +43,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		</div>
 
 		<nav class="box">
+			<h2>navigation</h2>
+			<a href="/">landing page</a>
 			<h3>personal</h3>
 			<a title="the webmaster and site!" href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
@@ -57,23 +59,20 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<h3>misc</h3>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
-			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img
-					src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
+			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
 
 			<h3>site</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
 			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif"> webgarden</a>
-			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src=""> notebook</a>
+			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
 			<h3>offsite</h3>
 			<a href="https://doqmeat.123guestbook.com/" target="_blank"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
 			<a href="https://neocities.org/site/doqmeat" target="_blank"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
-			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img
-					src="/!g/pix/puter.gif"> github</a>
-			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img
-					src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github</a>
+			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
 		<div id="intro" class="box">
@@ -84,8 +83,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a
 				little message <img src="!g/pix/cat-heart.gif"></p>
 
-			<p>credit for all graphics and js snippets used on this page can be found <a
-					href="/notebook/links/credit.html#home">here!</a></p>
+			<p>credit for all graphics and js snippets used on this page can be found <a href="/notebook/links/credit.html#home">here!</a></p>
 
 			<p>this website will probably be an <a href="/notebook/sitely/to-dos.html">endless work-in-progress</a> for quite
 				a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache
@@ -101,10 +99,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="status" class="box;">
 			<div class="padding">
-				<h3>status</h3>
-				<a href="https://www.imood.com/users/doqmeat"><img
-						src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif"
-						alt="The current mood of doqmeat at www.imood.com" border="0"></a>
+				i am feeling...
+				<a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a>
 
 				<div id="statuscafe">
 					<div id="statuscafe-username"></div>
@@ -112,7 +108,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 				</div>
 				<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
 
-				<h3>piclog</h3>
+				<h2>piclog</h2>
 				<a href="https://piclog.blue/profile.php?id=51"><img src="https://piclog.blue/latest.php?id=51" width="50%"></a>
 
 			</div>
@@ -138,9 +134,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats/!g/orange-eating-stupid.gif"><img src="/collection/cats/!g/orange-eating-stupid.gif"
-					width="100%"
-					alt="gif of a cat eating from his bowl and suddenly stops to look blankly at the camera. after 3 seconds he resumes to eat again."></a>
+			<a href="/collection/cats/!g/orange-eating-stupid.gif"><img src="/collection/cats/!g/orange-eating-stupid.gif" width="100%" alt="gif of a cat eating from his bowl and suddenly stops to look blankly at the camera. after 3 seconds he resumes to eat again."></a>
 		</div>
 
 		<div id="deco-1" class="box">
@@ -150,59 +144,43 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
 
-			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/flowers.gif"></a>
+			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting-cliques/flowers.gif"></a>
 
-			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/blackcats.png"></a>
+			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img src="/!g/web/fanlisting-cliques/blackcats.png"></a>
 
-			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/mush50x50.png"></a>
+			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img src="/!g/web/fanlisting-cliques/mush50x50.png"></a>
 
-			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/bloodborne_50x50_4.png"></a>
+			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img src="/!g/web/fanlisting-cliques/bloodborne_50x50_4.png"></a>
 
 			<a href="https://fan.redcrown.net/fallout/" target="_blank"><img src="/!g/web/fanlisting-cliques/fallout.png"></a>
 
-			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/portal2.png"></a>
+			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img src="/!g/web/fanlisting-cliques/portal2.png"></a>
 
-			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/hellokitty50x50_05.gif"></a>
+			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img src="/!g/web/fanlisting-cliques/hellokitty50x50_05.gif"></a>
 
-			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/chococat50x50_1.png" alt="chococat fanlisting"></a>
+			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img src="/!g/web/fanlisting-cliques/chococat50x50_1.png" alt="chococat fanlisting"></a>
 
 			<br>
-			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png"
-					alt="cafe rose banner"></a>
+			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
 
 			<br>
-			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png"
-					alt="needy streamer overdose fanlisting"></a>
+			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting"></a>
 
 			<br>
 			<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting-cliques/cats.gif"></a>
 			<br>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/lejlart-space.gif" alt="appledust space mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img
-					src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-space.gif" alt="appledust space mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
 
 			<br>
-			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> i am a <a
-				href="https://cliques.moudoku.com/cats" target="_blank">black cat</a>
+			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a>
 
 		</div>
 
@@ -218,8 +196,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<!-- mob psycho 100 / mp100 webring -->
 			<center>
 				<div id='mobring'>
-					<script type="text/javascript"
-						src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
+					<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
 					<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/basic-widget.js"></script>
 				</div>
 			</center>
@@ -245,18 +222,15 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			</div>
 
 			<!-- melonland surf -->
-			<p><object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml"
-					style="width: 100px; height: 100px;"></object>
+			<p><object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
 
 				<!--  moon widget -->
 			<div id="moon">
-				<iframe width="180" height="180" style="border:none;background:black;" src="https://dimden.dev/moon?custom=1"
-					name="dimdenmoonwidget"></iframe>
+				<iframe width="180" height="180" style="border:none;background:black;" src="https://dimden.dev/moon?custom=1" name="dimdenmoonwidget"></iframe>
 			</div>
 
 			<!-- mushroom -->
-			<iframe src="https://shroom.ink/guard.html/?site=doqmeat&shroom=4" height="250px" width="200px" scrolling="no"
-				frameborder="0"></iframe>
+			<iframe src="https://shroom.ink/guard.html/?site=doqmeat&shroom=4" height="250px" width="200px" scrolling="no" frameborder="0"></iframe>
 
 		</div>
 
@@ -268,15 +242,10 @@ feel free to look around :) just don't be THAT person and take the entire code f
 		<div id="widget" class="box">
 
 			you are visitor #
-			<script language="javascript" type="text/javascript"
-				src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img
-					src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
+			<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=39059397&main=1"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=39059397&main=1" /></noscript>
 
 			<br>
-			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site"
-				target="_blank" title="enjoy my site? give it a clap!"><img
-					src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en"
-					alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
+			<a href="//clap.fc2.com/post/doqmeat/?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&title=doqmeat%27s+site" target="_blank" title="enjoy my site? give it a clap!"><img src="//clap.fc2.com/images/button/orange/doqmeat?url=https%3A%2F%2Fdoqmeat.neocities.org%2F&amp;lang=en" alt="Web Clap by FC2" style="border:none;border-radius:10px;" /></a>
 		</div>
 
 		<div id="button" class="box">
@@ -284,20 +253,34 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p>and remember to <a class="outlink" href="" target="_blank">not hotlink</a></p>
 
 			<img src="sites/!g/doqmeat.png" alt="doqmeat button">
-			<textarea
-				style="max-width:88px;height:35px;"><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
+			<textarea style="max-width:88px;height:35px;"><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
 		</div>
 
 		<div id="cat" class="box">
 			<img id="catIMG" title="me irl btw" src="/!g/deco/cat-plush-BIG.png" alt="">
 		</div>
-
 		<!--		stickers around home-->
 		<img id="sticker1" class="deco" alt="">
 		<img id="sticker2" class="deco" alt="">
 		<img id="sticker3" class="deco" alt="">
 		<img id="sticker4" class="deco" alt="">
 		<img id="sticker5" class="deco" alt="">
+		<img id="sticker6" class="deco" alt="">
+		<img id="sticker7" class="deco" alt="">
+		<img id="sticker8" class="deco" alt="">
+		<img id="sticker9" class="deco" alt="">
+		<img id="sticker10" class="deco" alt="">
+		<img id="sticker11" class="deco" alt="">
+		<img id="sticker12" class="deco" alt="">
+		<img id="sticker13" class="deco" alt="">
+		<img id="sticker14" class="deco" alt="">
+		<img id="sticker15" class="deco" alt="">
+		<img id="sticker16" class="deco" alt="">
+		<img id="sticker17" class="deco" alt="">
+		<img id="sticker18" class="deco" alt="">
+		<img id="sticker19" class="deco" alt="">
+		<img id="l-sticker" alt="">
+		<img id="r-sticker" alt="">
 		<!--		wrapper end div-->
 	</div>
 
@@ -308,14 +291,14 @@ feel free to look around :) just don't be THAT person and take the entire code f
 	</button>
 	<footer class="box">
 		<p><a href="/notebook/links/credit.html#home">credit</a> / <b>last updated on 03.dec.23</b></p>
-		<p>website coded with love by des! <img src="/!g/pix/cathead.gif" alt=""> hosted on <a class="outlink"
-				href="https://neocities.org/site/doqmeat">neocities</a> since april 11, 2023</p>
+		<p>website coded with love by des! <img src="/!g/pix/cathead.gif" alt=""> hosted on <a class="outlink" href="https://neocities.org/site/doqmeat">neocities</a> since april 11, 2023</p>
 	</footer>
 
+	<!--scripts-->
 	<script>
 		(function titleScroller(text) {
 			document.title = text;
-			setTimeout(function () {
+			setTimeout(function() {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
 		}(" doqmeat v3 ☆⌒(*＾-゜)v☆ "));
