--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -28,7 +28,7 @@
 		<a href="https://dokode.moe" target="_blank"><img src="/sites/!g/dokode.moe.gif"></a>
 		<a href="https://nyaa.neocities.org" target="_blank"><img src="/sites/!g/nyaa.gif"></a>
 		<a href="https://gothiclolita.neocities.org/" target="_blank"><img src="https://gothiclolita.neocities.org/gothiclolita.png" width="88px"></a>
-		<a title="tsukinio" href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a>
+		<a href="https://komichi.neocities.org" target="_blank"><img src="/sites/!g/komichi.png"></a>
 		<a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a>
 		<a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
 		<a href="https://faegardens333.neocities.org/" target="_blank"><img src="/sites/!g/faegardens333.gif"></a>
@@ -44,12 +44,14 @@
 		<p>if you still cant find what you're looking for, you're always welcome to ask in my chatbox or e-mail. happy coding!</p>
 
 		<h2 id="home">homepage v3 credits (currently a wip!)</h2>
+		<li>most pixels were found from pixel collection pages like this <a href="https://graphic.neocities.org/" target="_blank">one!</a> i'd love to find the sources for them so i can give proper credit so if any one knows, please e-mail me!</li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">theme switcher js</a></li>
 		<p>these will depend on the theme selected!</p>
 
 		<h3>flower.css</h3>
-		<li>background by <a href="https://www.pexels.com/photo/yellow-wildflowers-against-cloudy-sky-4497731/" target="_blank">Karolina Grabowska</a> from pexels</li>
+		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, newpenji, gaegu</li>
+		<li>background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
 		<h3>space.css</h3>
 		<li>background by <a href="https://pixelins.tumblr.com/post/100938645642/okay-i-just-really-love-space-here-are-some-tile" target="_blank">pixelins</a></li>
