added palestine button to landing page

--- a/website/index.html
+++ b/website/index.html
@@ -163,29 +163,27 @@
 	</div>
 
 	<footer>
-		<p class="cred"><b>credit:</b>
-			background by <a href="https://www.pexels.com/photo/white-and-yellow-flower-on-a-forest-105075/">david j. boozer</a> from pexels
-
-			<img src="!g/pix/1leaf.png">
-
-			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
-
-			<img src="!g/pix/1leaf.png">
-
-			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
-
-			<br>
-			<img src="https://doqmeat.neocities.org/!g/pix/mush.gif">
-			<br>
-
-			<a href="mailto:doqmeat@gmail.com">e-mail</a>
+		<p class="cred">
+			<a href="mailto:doqmeat@gmail.com">e-mail me</a>
 			⋆
 			<a href="https://neocities.org/site/doqmeat">neocities profile</a>
 			⋆
-			<a href="https://github.com/doqmeat/doqmeat.neocities.org">github</a>
+			<a href="https://github.com/doqmeat/doqmeat.neocities.org">github code</a>
+			<br>
+			<img src="https://doqmeat.neocities.org/!g/pix/mush.gif">
+			<br>
+			<b>credit:</b>
+			background by <a href="https://www.pexels.com/photo/white-and-yellow-flower-on-a-forest-105075/">david j. boozer</a> from pexels
+			<img src="!g/pix/1leaf.png">
+			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
+			<img src="!g/pix/1leaf.png">
+			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
+
+			<br>
 
 		</p>
 		<img src="/sites/!g/doqmeat.png">
+		<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-stamps/!g/palestine.gif"></a>
 		<img src="/collection/internet-stamps/!g/best%20viewed.jpg">
 		<img src="/collection/internet-stamps/!g/nop.gif">
 		<img src="/collection/internet-stamps/!g/dontfeedai.gif">
