--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -47,10 +47,11 @@
 		<li>most pixels were found from pixel collection pages like this <a href="https://graphic.neocities.org/" target="_blank">one!</a> i'd love to find the sources for them so i can give proper credit so if any one knows, please e-mail me!</li>
 		<li><a href="https://stackoverflow.com/questions/16354122/how-to-put-scrolling-text-in-title-tag" target="_blank">scrolling title tag</a></li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">theme switcher js</a></li>
+		<li><a href="https://github.com/biancarosa/lastfm-last-played" target="_blank">last played last.fm js</a> code by bianca rosa</li>
 		<p>these will depend on the theme selected!</p>
 
 		<h3>flower.css</h3>
-		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, newpenji, gaegu</li>
+		<li><a href="/notebook/links/fonts.html">fonts</a>used in this page are: typo garden, newpenji, gaegu, always in my heart</li>
 		<li>background by <a href="https://unsplash.com/photos/grass-field-at-daytime-PEm_sLmJT-w" target="_blank">Rodion Kutsaiev</a> from unsplash</li>
 
 		<h3>space.css</h3>
