11.dec.23 - gaming log + new featured cat!

--- a/website/home.html
+++ b/website/home.html
@@ -333,26 +333,11 @@ just dont take the ENTIRE code for your OWN site! dont be that person please!
 			<!-- recently added -->
 			<div id="recently" class="gradient3 border3">
 				<p><span class="title"><img src="/!g/pix/laptop.gif"> site updates</span>
+					<li>11.dec.23 - <a href="/vgs">gaming log</a> + new featured cat <img src="/!g/pix/cat-tail.gif" alt=""></li>
 					<li>08.dec.23 - <a href="/journal">journal log</a> + <a title="i bought more stamps and got a notebook of tomie depaola ones. they're very cute!" href="/collection/mail-stamps">mail stamp</a> + <a title="added scans for yeule's serotonin II" href="/music/cds">CDs</a></li>
 					<li>05.dec.23 - new <a title="lexie liu's delulu" href="/music/listening-log/2023/12.html#2">listening log</a></li>
 					<li>02.dec.23 - new pic in <a href="photobook/index.html">photobook</a> + <a href="journal/2023/12.html">journal log</a></li>
 					<li>01.dec.23 - created december <a title="yukika's timelapse" href="/music/listening-log/2023/12.html#1">listening log</a> + website now deploys from <a href="https://github.com/doqmeat/website" target="_blank" class="outlink">github!</a> + <a href="/music">featured song &amp; album</a></li>
-					<li>28.nov.23 - <a href="/vgs/fashion-dreamer/index.html">fashion dreamer</a> page big update!</li>
-					<li>27.nov.23 - <a href="/journal">journal log</a></li>
-					<li>24.nov.23 - <a href="/music/listening-log/2023/11.html">listening log entry</a></li>
-					<li>21.nov.23 - changed "cat of the week" to "featured cat" :3 also there's a new one</li>
-					<li>19.nov.23 - <a title="BADモード, bye-bye strobe" href="/music/listening-log/2023/11.html">listening log</a> entries</li>
-					<li>16.nov.23 - <a href="/blog">blog</a> code revamp</li>
-					<li>15.nov.23 - <a href="music/listening-log/2023/11.html#2">listening log</a> entry</li>
-					<li>11.nov.23 - <a href="/music/cds.html">CD collection</a> page finished! + added <a href="/collection/sticker-sheets">sticker sheets</a> to collections
-						+ new <a href="/collection/mail-stamps/index.html">stamp</a> in collection!</li>
-					<li>08.nov.23 - november <a href="/music/listening-log/2023/11.html#1">listening log</a> up with new entry! + <a href="/journal">journal log</a></li>
-					<li>30.oct.23 - <a href="music/listening-log/2023/10#15.html">listening log</a> entry</li>
-					<li>28.oct.23 - <a href="/journal">journal log</a> about my fnaf theater experience</li>
-					<li>24.oct.23 - big <a href="/music/listening-log/2023/10.html">listening log</a> update!</li>
-					<li>20.oct.23 - <a href="/music/index.html">music index page</a> rework alongside its pages is finally done!!</li>
-					<li>19.oct.23 - <a href="october-movies/index.html">october movies</a> + working on music page rework!</li>
-					<li>14.oct.23 - added <i>sticky business</i> to <a href="vgs/index.html">gaming log</a></li>
 			</div>
 
 			<!-- featured pafe -->
@@ -381,7 +366,7 @@ just dont take the ENTIRE code for your OWN site! dont be that person please!
 			<div id="weekly-cat" class="gradient3 border3">
 
 				<p><span class="title"><img src="/!g/pix/catgrey.gif"> featured cat</span>
-				<p style="text-align:center;"><a title="i am currently obsessed with this stupid cat" href="/collection/cats/!g/orange-eating-stupid.gif" target="_blank"><img src="/collection/cats/!g/orange-eating-stupid.gif" width="90%"></a>
+				<p style="text-align:center;"><a title="wait....... im jolly?!??!" href="/collection/cats/!g/wait-im-jolly.jpeg" target="_blank"><img src="/collection/cats/!g/wait-im-jolly.jpeg" width="90%"></a>
 			</div>
 
 			<!-- the whatever zone -->
