--- a/website/vgs/bloodborne/index.html
+++ b/website/vgs/bloodborne/index.html
@@ -72,13 +72,13 @@
 		<p>it is safe to say that IF i can get my ps4 fixed again, i will need a GOOD warmup before i try to fight that boss again. UGH but i do miss bloodborne a normal amount &lt;/3 so sad </p>
 		<hr id="6">
 		<p><span class="date">14.sep.23</span><a title="journal log" href="/journal/2023/09#14" target="_blank">no more bloodborne til further notice</a></p>
-		<hr>
-
+		<hr id="7">
+		<p><span class="date">11.dec.23</span> i don't know why i just thought about this but i think <i>if</i> i a bought a WIRED ps4 controller, i Would Be Able to play bloodborne again..... don't really feel like dropping 20 bucks just for that though. i really like the little messages people place in these games and if i play again i won't have that &lt;/3 so yeah i don't have much desire to buy that controller despite me missing the game! i thought about getting my ps4 fixed that first week it went nuts, but at that point i might as well just wait 5 years or something until i can afford a ps5. ahhhh <img src="/!g/pix/emote1pout.gif"></p>
 
 
 		<h4>reference links</h4>
 		<li><a href="https://www.bloodborne-wiki.com" target="_blank">bloodborne-wiki</a></li>
-		<li><a href="https://docs.playstation.com/reader/#/documents/bloodborne-official-digital-guide-ps4?chapter=1&page=1" target="_blank">stragedy guide (playstation docs)</a></li>
+		<li><s><a href="https://docs.playstation.com/reader/#/documents/bloodborne-official-digital-guide-ps4?chapter=1&page=1" target="_blank">stragedy guide (playstation docs)</a></s> i don't know what happened but i can't access it through this link anymore :( <a href="https://archive.org/details/bloodborne-collectors-edition-guide/mode/2up">archive.org copy</a></li>
 		<li><a href="https://archive.org/details/artbook-Bloodborne_Official_Artworks/mode/2up" target="_blank">official artbook (archive.org pdf)</a></li>
 
 
