--- a/website/vgs/info.html
+++ b/website/vgs/info.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>vgs info</title>
+	<title>info</title>
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -21,6 +21,7 @@
 				});
 			});
 		})(jQuery);
+
 	</script>
 	<!--  end of tooltip shit -->
 	<style>
@@ -49,19 +50,21 @@
 			padding-left: 2px;
 			margin-bottom: 10px;
 		}
+
 	</style>
 </head>
 
 <body>
 	<div id="iframepc">
 		<p>welcome to <span class="gaminglog">doqmeat's gaming log!</span> these are either video games i've enjoyed, currently playing, or want to play! most of the time i'll write my thoughts on them, my progress, share screenshots i've taken, and anything else! <b>currently a MASSIVE work in progress!</b> spoilers will be <span class="spoiler">hidden!</span></p>
-		<p>click on a <mark>vg thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of iframe!</span>
+		<p>click on a <mark>vg thumbnail and content will appear here!</mark> <span class="hide"> <img src="/!g/pix/caution1.gif"> <a href="/vgs" target="_parent">click here to go to index page</a> if you're out of frame!</span>
 		<p>they are in alphabetical order and can be sorted by the tags seen above them!</p>
-		<br><img src="/!g/deco/flower6.gif">
+		<img src="/!g/deco/sunflowers2.gif">
 
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>11.dec.23 - log: <a href="fortnite/index.html#1">fortnite</a>, <a href="bloodborne/index.html#7">bloodborne</a></li>
 			<li>28.nov.23 - updated <a href="fashion-dreamer/index.html">fashion dreamer</a></li>
 			<li>23.nov.23 - updated <a href="fortnite/index.html">fortnite</a> page so now each skin has their own screenshot set :) more organized this way YAY!</li>
 			<li>03.nov.23 - log: <a href="/vgs/fashion-dreamer">fashion dreamer</a></li>
