--- a/website/vgs/fortnite/index.html
+++ b/website/vgs/fortnite/index.html
@@ -26,7 +26,7 @@
 	<!--  end of tooltip shit -->
 	<style>
 		body {
-			background: url(https://cdn2.unrealengine.com/fortnite-rainbow-royale-2022-1920x1080-ab7378504606.jpg) no-repeat center center fixed;
+			background: url('bg1.png') no-repeat center center fixed;
 			background-size: cover;
 		}
 
@@ -61,9 +61,9 @@
 
 		<h4>logs</h4>
 
-		<p>i play this game way too fucking much!!!! well ever since i made this neocities i've been playing less actually... but i do enjoy this game a lot! especially with friends. im pretty average btw. i should mention somewhere in the vgs page that i suck at video games tbh. but i have my fun!</p>
+		<p>i play this game way too fucking much!!!! well ever since i made this neocities i've been playing less actually... but i do enjoy this game a lot! especially with friends. im pretty average btw. i should mention somewhere in the gaming log index that i suck at video games. but i have my fun!</p>
 
-		<p>been playing on &amp; off since june 2018 with the introduction of chapter 1 season 5! honestly hate to admit it but i am very invested in the lore of this game.... for a while they threw marvel and dc stuff in there which i mostly ignore because i really dont care. the lore is very interesting for me!</p>
+		<p>been playing on &amp; off since june 2018 with the introduction of chapter 1 season 5! honestly hate to admit it but <s>i am very invested in the lore of this game.... for a while they threw marvel and dc stuff in there which i mostly ignore because i really dont care. the lore is very interesting for me!</s></p>
 
 		<p><mark>i absolutely love some of the original skin designs of this game!</mark> they are so cool and inspiring to me. will probably make a tiny space for them here in the future</p>
 		<hr>
@@ -73,6 +73,17 @@
 				<source src="https://files.catbox.moe/q8b15i.mp4" type="video/mp4">
 			</video>
 		</details>
+		<hr id="1">
+		<p><span class="date">11.dec.23</span> gamers, i have A Few thoughts on fortnite as of late.</p>
+		<p>recently, fortnite added <b>3 new core game modes</b>: <i>lego fortnite</i> (open world survival), <i>rocket racing</i> (racing game), and <i>fortnite festival</i> (rhytm game that is basically a guitar hero look-a-like, understandably so since it is developed by <a title="wikipedia" href="https://en.wikipedia.org/wiki/Harmonix#Purchase_by_Epic_Games" target="_blank" class="outlink">harmonix</a>). i've been playing all of them and they are all pretty fun!! i've really liked playing them so far, specially the lego mode. but that is for another log...</p>
+		<p>my main issue is the insane prices on some of the things they are selling for these modes. which to be clear: i do not give a fuck about them. it's just kinda frustrating to see how insanely greedy <b>epic games</b> has become.</p>
+		<p>a nice looking car model for the <i>rocket racing</i> mode for 4k vbucks???????? do you know how much that is in USD? ALMOST $36?!??!? FOR A FAKE CAR???</p>
+		<p><i>fortnite festival</i> also got a <b>seperate battlepass</b> (yes seperate from the regular battle royale mode.) that costs 1,800 v-bucks (almost double the price of the regular battlepass) and it does <b>not</b> give you any of those v-bucks back.</p>
+		<p>like? what is happening?? <img src="/!g/pix/emote1angy.gif"> with the growth of fortnite it was maybe inevitable that epic would try to milk THE FUCK out of its fanbase. which consist of mostly? children? and i know. the microtransactions already being in a kids game is a bit erm to begging with. but i always thought the prices of the skins (post 2018 at least) were pretty fair. alongside the <b>regular</b> season battlepass which you can get for just 950 v-bucks and once you complete it, it gives you 1500 v-bucks back. how generous of them! but at least it's SOMETHING compared to the clear cash grab that the <i>fortnite festival</i> 'battlepass' is.</p>
+		<p>this company as a whole just pisses me off. from the moment they <a title="epic games' blog post" href="https://www.epicgames.com/site/en-US/news/bandcamp-joining-epic-games-to-support-fair-open-platforms-for-artists-and-fans" target="_blank" class="outlink">acquired bandcamp</a>. just to sell it off a year later <a title="epic games' blog post" href="https://www.epicgames.com/site/en-US/news/layoffs-at-epic" target="_blank" class="outlink">amid the layoffs</a>, the reason being because they were "losing more money" than what they were earning. sure. and they also want to turn fortnite into a metaverse???? whatever That means.</p>
+		<p>i had mentioned previously in my logs that the lore of the game was very interesting to me. and it really was! fortnite has such a unique charm to it when it comes to the story (it once had) and its original characters. i was crazily invested. but nowadays it's very clear they Do Not care about the lore they once had going for fortnite. they still try! but their <b>constant</b> efforts of including collabs in the 'lore' of the game just because...? collab = money i guess?</p>
+		<p>it's just very frustrating to see as someone who got into the game because of this unique charm. the new game modes are all super fun and all. and you don't need to buy anything to enjoy the game. but it SHOWS that their priority with fortnite is just to make the most amount of money as possible. and it's a bit saddening to see.</p>
+
 		<h4>fav skins</h4>
 
 		<table style="width:100%">
@@ -170,7 +181,7 @@
 
 	</div>
 	<footer>
-		<b>credit:</b> bg img from epic games <small>dying to know the artist tbh i love this loading screen</small>
+		<b>credit:</b> bg img from epic games <small>dying to know the artist, i love this loading screen</small>
 		<br>
 		<a href="/home">home</a> / <a href="/vgs">gaming log</a> / <a href="#">top</a>
 	</footer>
