--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -97,38 +97,32 @@
 			<a title="jude - love the video game pages!! very creative way of logging them :)" href="https://blackwater.neocities.org/" target="_blank"><img src="https://blackwater.neocities.org/img/banner2.gif"></a>
 			<a title="benrey - love the shrines" href="https://lamorte.neocities.org" target="_blank"><img src="!g/lamorte.gif"></a>
 			<a title="harley - very simple but cute blog!" href="https://cherrycloudchiffon.neocities.org" target="_blank"><img src="!g/cherrycloudchiffon.png"></a>
-			<a title="voidsdimension" href="https://voidsdimension.neocities.org" target="_blank"><img src="!g/voidsdimension.png"></a>
-			<a title="hues" href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png"></a>
-			<a title="mei" href="https://meixins.neocities.org" target="_blank"><img src="!g/meixins.gif"></a>
-			<a title="gooby" href="https://goooby.neocities.org/" target="_blank"><img src="https://goooby.neocities.org/goobie_button.gif"></a>
-			<a title="ilovesushi" href="https://ilovesushi.neocities.org" target="_blank"><img src="!g/ilovesushi.gif"></a>
-			<a title="yusha" href="https://yusha.neocities.org/" target="_blank"><img src="!g/yusha.png"></a>
-			<a title="0oxo0" href="https://0oxo0.neocities.org/" target="_blank"><img src="!g/0oxo0.gif"></a>
-			<a title="kojou" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
+			<a title="hues - really like their wardrobe page!" href="https://sillytime.neocities.org" target="_blank"><img src="!g/sillytime.png"></a>
+			<a title="mei - cool site with lots to see! " href="https://meixins.neocities.org" target="_blank"><img src="!g/meixins.gif"></a>
+			<a title="gooby - cute siteee with fun stuff to see!" href="https://goooby.neocities.org/" target="_blank"><img src="!g/gooby.gif"></a>
+			<a title="ilovesushi - fun site and great pixels!!" href="https://ilovesushi.neocities.org" target="_blank"><img src="!g/ilovesushi.gif"></a>
+			<a title="yusha - this is a small site but i find it sooo charming!!! it was one of the first sites i stumbled upon when i made a neocities and as very inspiring to me" href="https://yusha.neocities.org/" target="_blank"><img src="!g/yusha.png"></a>
+			<a title="kojou - i love all the art around this site!" href="https://kojou.neocities.org" target="_blank"><img src="!g/kojou.jpg"></a>
 			<a title="imbran" href="https://imbran.neocities.org" target="_blank"><img src="!g/imbran.gif"></a>
-			<a title="meowbark" href="https://meowbark2000.neocities.org" target="_blank"><img src="!g/meowbark2000.png"></a>
-			<a title="andou" href="https://andou.gay" target="_blank"><img src="!g/andou.gay.gif"></a>
-			<a title="brittanie" href="https://petdiary.neocities.org" target="_blank"><img src="!g/petdiary.png"></a>
-			<a title="toonie" href="https://artwork.neocities.org" target="_blank"><img src="!g/artwork.gif"></a>
-			<a title="casey" href="https://magnapina.neocities.org" target="_blank"><img src="!g/magnapina.png"></a>
-			<a title="corey" href="https://ruralrose.neocities.org" target="_blank"><img src="!g/ruralrose.gif"></a>
-			<a title="soy" href="https://digibun.neocities.org" target="_blank"><img src="!g/digibun.png"></a>
-			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
-			<a title="kristin" href="https://antikrist.lol" target="_blank"><img src="!g/antikrist.gif"></a>
-			<a title="salin" href="https://sanhyo.neocities.org" target="_blank"><img src="!g/sanhyo.gif"></a>
-			<a title="cloudcover" href="https://cloudcover.neocities.org" target="_blank"><img src="!g/Cloudcover.png"></a>
-			<a title="aster" href="https://vampire-aster.neocities.org" target="_blank"><img src="!g/vampire-aster.gif"></a>
-			<a title="spiritcellar" href="https://spiritcellar.neocities.org" target="_blank"><img src="!g/spiritcellar.gif"></a>
-			<a title="ike" href="https://milfgod.net" target="_blank"><img src="!g/milfgod.gif"></a>
-			<a title="vurren" href="https://vurren.neocities.org" target="_blank"><img src="!g/vurren.gif"></a>
-			<a title="fedya" href="https://fedyafunk.neocities.org/home" target="_blank"><img src="!g/fedyafunk.gif"></a>
-			<a title="twansgendew" href="https://twansgendew.net" target="_blank"><img src="!g/twansdendew.gif"></a>
-			<a title="gabriel" href="https://vampireboytoy.neocities.org" target="_blank"><img src="!g/vampireboytoy.gif"></a>
-			<a title="devils" href="https://yourdevilfriends.art" target="_blank"><img src="!g/yourdevilfriends.png"></a>
-			<a title="grim / oscar" href="https://bisuko.neocities.org/" target="_blank"><img src="!g/bisuko.png"></a>
+			<a title="meowbark - FUN!!! the photo blog is my fav page from this site!" href="https://meowbark2000.neocities.org" target="_blank"><img src="!g/meowbark2000.png"></a>
+			<a title="andou - site of a vtuber!" href="https://andou.gay" target="_blank"><img src="!g/andou.gay.gif"></a>
+			<a title="brittanie - omg i love this one. full of personality and super charming and simple!" href="https://petdiary.neocities.org" target="_blank"><img src="!g/petdiary.png"></a>
+			<a title="toonie - a site that collects and showcases graphics! their pixel art is super cute as well" href="https://artwork.neocities.org" target="_blank"><img src="!g/artwork.gif"></a>
+			<a title="casey - love the vocaloid page!" href="https://magnapina.neocities.org" target="_blank"><img src="!g/magnapina.png"></a>
+			<a title="corey - very neat layout designs + lovely atmosphere? if that makes any sense" href="https://ruralrose.neocities.org" target="_blank"><img src="!g/ruralrose.gif"></a>
+			<a title="soy - i LOVE the webmaster's bunnies!! they are so cute. also just cute site overall" href="https://digibun.neocities.org" target="_blank"><img src="!g/digibun.png"></a>
+			<a title="kristin - this site is like being inside of a lava lamp for me" href="https://antikrist.lol" target="_blank"><img src="!g/antikrist.gif"></a>
+			<a title="salin - fun pages" href="https://sanhyo.neocities.org" target="_blank"><img src="!g/sanhyo.gif"></a>
+			<a title="cloudcover - seal....." href="https://cloudcover.neocities.org" target="_blank"><img src="!g/Cloudcover.png"></a>
+			<a title="aster - this site is just sooo pretty!!!!" href="https://vampire-aster.neocities.org" target="_blank"><img src="!g/vampire-aster.gif"></a>
+			<a title="spiritcellar - we LOVE iframes in this house! just overall very cool stuff on this site" href="https://spiritcellar.neocities.org" target="_blank"><img src="!g/spiritcellar.gif"></a>
+			<a title="ike - all the clutter and graphics are o charming." href="https://milfgod.net" target="_blank"><img src="!g/milfgod.gif"></a>
+			<a title="vurren - meow :3" href="https://vurren.neocities.org" target="_blank"><img src="!g/vurren.gif"></a>
+			<a title="fedya - radioactive site but in a good way" href="https://fedyafunk.neocities.org/home" target="_blank"><img src="!g/fedyafunk.gif"></a>
+			<a title="grim / oscar - I LOVE THIS SITE!!!! it inspires me a ton i think it's so fun and i love the webmaster's art style as welll" href="https://bisuko.neocities.org/" target="_blank"><img src="!g/bisuko.png"></a>
 			<a title="kerberos" href="https://myths-garden.neocities.org/" target="_blank"><img src="!g/myths-garden.png"></a>
-			<a title="cc" href="https://debtdeath.neocities.org/" target="_blank"><img src="!g/debtdeath.png"></a>
-			<a title="benny" href="https://sugarforbrains.neocities.org/" target="_blank"><img src="!g/sugarforbrains.gif"></a>
+			<a title="cc - clean and nice site!" href="https://debtdeath.neocities.org/" target="_blank"><img src="!g/debtdeath.png"></a>
+			<a title="benny - colorful and fun site, very cool!" href="https://sugarforbrains.neocities.org/" target="_blank"><img src="!g/sugarforbrains.gif"></a>
 			<a title="rita" href="https://sunnyday.neocities.org/" target="_blank"><img src="!g/sunnyday.png"></a>
 			<a title="shiraru" href="https://shiraru.neocities.org/" target="_blank"><img src="!g/shiraru.PNG"></a>
 			<a title="lana - a personal site that is in portuguese but that won't stop me from enjoying it!! i can somewhat read it a lil bit but either way i just love how this site looks! and the stuff they write (despite me using a translator) is very interesting!" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
@@ -180,6 +174,11 @@
 			<a title="mapplebear - a super sweet and cozy site" href="https://maplebear.neocities.org/" target="_blank"><img src="!g/maplebear.gif" alt="maplebear"></a>
 			<a title="nork - i love the layouts a lot. the music page is super nice as well." href="https://nork2004.neocities.org" target="_blank"><img src="!g/nork2004.png" alt="nork2004"></a>
 			<a title="a0i - LOVELY layout designs" href="https://hatsu.neocities.org/" target="_blank"><img src="!g/hatsu.png" alt="hatsu"></a>
+			<a title="frills - cool and responsive site!" href="https://frills.dev/" target="_blank"><img src="!g/frills.png" alt="frills"></a>
+			<a title="cepheus - neat graphic designs and layouts" href="https://cepheus.neocities.org/" target="_blank"><img src="!g/cepheus.gif" alt="cepheus"></a>
+			<a title="wrender - cuteeee site with lots to see! i like how each page follows a color palette" href="https://wrender.neocities.org/" target="_blank"><img src="!g/wrender.gif" alt="wrender"></a>
+			<a title="ruili - blueee" href="https://ruili.neocities.org/" target="_blank"><img src="!g/ruili.gif" alt="ruili"></a>
+			<a title="lucard - what a lovely site this is looking up to be!! so excited to see the progress" href="https://lucard.neocities.org/" target="_blank"><img src="!g/lucard.png" alt="lucard"></a>
 
 		</div>
 
@@ -323,6 +322,7 @@
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
+		<p>please do let me know if these sites had their URL changed!</p>
 
 		<div id="grave" class="neo">
 			<a title="mewtle" href="https://meowii.neocities.org" target="_blank"><img src="!g/meowii.gif"></a>
@@ -335,6 +335,7 @@
 			<a href="https://deathbycats.neocities.org/" target="_blank"><img src="!g/deathbycats.png"></a>
 			<a title="cora - cute site!! i love the cats around this site" href="https://realitv.neocities.org" target="_blank"><img src="!g/realitv.gif"></a>
 			<a title="nyatchi - such a cute layout" href="https://nyatchi.neocities.org" target="_blank"><img src="!g/nyatchi.gif"></a>
+			<a title="vagabondage" href="https://vagabond.sh" target="_blank"><img src="!g/vagabondage.gif"></a>
 		</div>
 
 		<!--box1 end wrapper end div-->
