added some sources i found

--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -45,7 +45,7 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 
 		<h1>internet graphics</h1>
 		<p><img src="/!g/deco/catlaying.gif"> i fucking love collecting these so much </p>
-		<p>click for credit, i'll try my best to link them back to their sources! some of these are <a href="/other/F2U/stamps" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
+		<p>click for credit, i'll try my best to link them back to their sources! some of these are <a href="/notebook/F2U/stamps.html" target="_blank">made by me</a> <img src="/!g/pix/2ofem.gif"></p>
 
 		<h2 id="1" class="title">stamps</h2>
 		<div id="stamps" class="container">
@@ -208,14 +208,14 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 
 		<h2 id="3" class="title">buttons</h2>
 		<div id="buttons" class="container">
-			<img src="!g/antinft.png">
+			<a href="https://rainy.gay/other/buttons"><img src="!g/antinft.png"></a>
 			<a href="https://www.tumblr.com/zeusofthecrows/695373316113973248/site-info-data?source=share" target="_blank"><img src="!g/best%20viewed.jpg"></a>
-			<a href="https://88by31.neocities.org/web" target="_blank"><img src="!g/dumbass.gif"></a>
+			<a href="https://zanarkand.neocities.org/withlove" target="_blank"><img src="!g/dumbass.gif"></a>
 			<img src="!g/bookmark.gif">
-			<img src="!g/dontfeedai.gif">
+			<a href="https://wynns-wonderful-pixel-paradise.neocities.org/buttons"><img src="!g/dontfeedai.gif"></a>
 			<img src="!g/miku.gif">
 			<img src="!g/cinna.gif">
-			<img src="!g/void.png">
+			<a herf="https://rainy.gay/other/buttons"><img src="!g/void.png"></a>
 			<img src="!g/bestviewed.gif">
 			<img src="!g/glue.jpeg">
 			<img src="!g/bestvwmonitor.gif">
