styled recaps a bit!
in preparation for 2023 :)

--- a/website/music/recaps/2022.html
+++ b/website/music/recaps/2022.html
@@ -9,7 +9,6 @@
 	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/frame.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 
 	<!-- tooltip shit -->
@@ -29,10 +28,28 @@
 
 	</script>
 	<!--  end of tooltip shit -->
+	<style>
+		body {
+			background: url('!g/2022.png') no-repeat center fixed;
+			background-size: cover;
+		}
+
+		h1,
+		h2,
+		h4 {
+			background: rgb(255, 255, 255);
+			background: linear-gradient(167deg, rgba(255, 255, 255, 1) 0%, rgba(139, 188, 221, 1) 52%, rgba(95, 123, 198, 1) 100%);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			-webkit-text-stroke-width: 1px;
+			-webkit-text-stroke-color: black;
+		}
+
+	</style>
 </head>
 
 <body>
-	<div id="frame">
+	<main>
 
 		<h1>2022 music recap</h1>
 		<small><b>note:</b> this is a copy of a notion page i have! i did not have my own website back then... <s>excuse the mess i have yet to finish cleaning up this page oops.</s> <b>05.dec.23 edit:</b> I FINISHED FORMATTING IT...</small>
@@ -194,7 +211,7 @@
 			<iframe width="100%" height="315" src="https://www.youtube.com/embed/50qKe8gZPgI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 		</details>
 
-		<h3>16.time slip by bronze ft. yukika</h3>
+		<h3>16. time slip by bronze ft. yukika</h3>
 		<p>i should listen to this album maybe????? this was an amazing collab tho yukika keeps winning</p>
 
 		<details>
@@ -245,7 +262,7 @@
 		</details>
 
 		<div id="albums">
-			<h2>fav 2022 albums and eps</h2>
+			<h2>favorite albums and eps</h2>
 		</div>
 		<h3>villain - drippin</h3>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4oOm4qnnn2qdOwSBX7nsWd?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -286,12 +303,21 @@
 		<h4>playlists of this year</h4>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1fP7Cz5XaJzzbBGqqQsxgc?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/29DStaK0agLZ1vINEMIWut?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-		<p class="date">written with love by des on 23.nov.22, published on 13.apr.23</p>
 
-	</div>
+	</main>
 
 	<footer>
-		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
+		<span class="date">written with love by des on 23.nov.22, published on 13.apr.23</span>
+		<br>
+		<a href="#">top</a>
+		<span class="emoji2"></span>
+		<a href="/music">music</a>
+		<span class="emoji2"></span>
+		<a href="/music/recaps">recaps</a>
+		<span class="emoji2"></span>
+		<a href="/home">home</a>
+		<span class="emoji2"></span>
+		<a href="/sitemap.html">sitemap</a>
 	</footer>
 </body>
 
