--- a/website/music/recaps/index.html
+++ b/website/music/recaps/index.html
@@ -7,7 +7,7 @@
 
 	<title>yearly recaps</title>
 	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
-<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
+	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/music/frame.css" rel="stylesheet" type="text/css" media="all">
 
@@ -35,14 +35,15 @@
 	<div id="frame">
 
 		<h2>yearly recaps</h2>
-<p>every year i make a like a music summary with my fav songs &amp; albums released that year, favorite finds, etc.</p>
-	<p><a href="2022.html" target="_parent">2022</a></p>
+		<p>every year i make a like a music summary with my fav songs &amp; albums released that year, favorite finds, etc.</p>
+		<p><a href="2022.html" target="_parent">2022</a></p>
 
 	</div>
 
 	<footer>
 		last updated: 19.oct.23 <br>
-		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
+		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
+	</footer>
 </body>
 
 </html>
